# SANBOSY

./: .gitattributes  .gitignore  Makefile  PLAN.md  README.md  SECURITY.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
app/: abuse.py  backends.py  cli.py  main.py  store.py
app/api/: auth.py  ratelimit.py  routes.py  schemas.py
app/executor/: jobqueue.py  limits.py  oci.py  runner.py  terminal.py
app/languages/: registry.py
app/ui/static/: index.html
deploy/: DEPLOY.md  HOME.md  cloud_setup.sh  home_install.sh  sandbox.env.example  sandbox.service  url.sh
scripts/: add_shell.sh  build_rootfs.py  make_key.py  serve_public.sh  setup_wsl2.sh  share.sh  smoke.sh  verify_auth.sh
tests/: abuse_check.sh  abuse_default_check.sh  auth_check.sh  concurrency.sh  conftest.py  edge_big.sh  edge_check.sh  history_check.sh  jobs_check.sh  malformed_check.sh  queue_check.sh  ratelimit_check.sh  retry_check.py  robustness_check.py  run_hostile.py  shutdown_check.sh  stream_check.sh  stress_check.sh  test_abuse.py  test_api.py  test_auth.py  test_auth_roles.py  test_backends.py  test_cache.py  test_cache_limit.py  test_containment.py  test_jobqueue.py  test_languages.py  test_ratelimit.py  test_retry.py  test_store.py  test_streaming.py  test_terminal.py  test_validation.py
tests/hostile/: adversary.cpp  adversary.py  diskbomb.py  evil.c  forkbomb.py  fsescape.py  hello.c  hello.cpp  hello.go  hello.js  hello.py  hello.rb  hello.rs  membomb.py  network.py  outputflood.py  probe.js  run_suite.py  seccomp.py
