[project]
name = "code-sandbox"
version = "1.0.0"
description = "Local multi-language code sandbox with gVisor isolation (Phase 1)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27",
        "pytest-rerunfailures>=14", "redis>=5"]
redis = ["redis>=5"]   # horizontal-scale backend (SANDBOX_REDIS_URL)

[tool.pytest.ini_options]
testpaths = ["tests"]
# only collect pytest modules; the *_check.py / run_hostile.py scripts are
# standalone runnable checks, not pytest tests
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "integration: end-to-end tests that launch real gVisor sandboxes (need runsc)",
]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient`:DeprecationWarning",
]
